alteracao de texto que estava errado

--- a/FormExerc/index.html
+++ b/FormExerc/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div>
-      <label for="nationality">Nacionalidade:</label>
+      <label for="nationality">Nacionalidade::</label>
       <select name="nationality" id="nationality">
         <option value="russian">Russa</option>
         <option value="american">Americano</option>
